:sparkles: initial commit

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-DATABASE_URL=postgresql://myuser:mypassword@localhost:15432/nest-init-postgres?schema=public
+DATABASE_URL=postgresql://myuser:mypassword@localhost:15433/wawefl?schema=public
 
-POSTGRES_DB=nest-init-postgres
+POSTGRES_DB=wawefl
 POSTGRES_USER=myuser
 POSTGRES_PASSWORD=mypassword
 
 SECRET_PASS=secret
+jwtSecret="mysecret"
+corsAuthorize="http://localhost:4200"
