--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
       - POSTGRES_USER=myuser
       - POSTGRES_PASSWORD=mypassword
     ports:
-      - 15432:5432
+      - 15433:5432
     volumes:
       - data-postgres:/var/lib/postgresql/data
 
 volumes:
   data-postgres:
-    name: nest-init-postgres
+    name: wawefl
